src/objects/SupplyPointDevice__c.object
<CustomObject>
    <fields>
        <fullName>ActiveBackground__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for reference in roll-up summary field &quot;Number of Active Supply Point Device&quot; on Supply Point as Active (formula) field can&apos;t be used. Use field update to copy the value from &quot;Active&quot; field. Hide from page layout</description>
        <label>Active (background)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>1. IF Today is greater than Installation date and Removal Date is BLANK, then Active
2. IF Removal Date is not BLANK and Instalment Date &lt;=TODAY&lt;=Removal Date, then Active
ELSE Inactive</description>
        <formula>AND(InstallationDate__c  &lt;=  TODAY(),RemovalDate__c  &gt;=  TODAY())  ||   AND( TODAY()  &gt;=  InstallationDate__c,ISBLANK(RemovalDate__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultAverageDailyUsage__c</fullName>
        <label>Default Average Daily Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeviceLocationPostcode__c</fullName>
        <description>Retrieve the Postcode of the Location that the Device is linked through Supply Point and populate it for Grouping of Devices.</description>
        <formula>SupplyPoint__r.Location__r.PostalZIPCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Location Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Supply Point Devices</relationshipLabel>
        <relationshipName>SupplyPointDevices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InstallationDate__c</fullName>
        <label>Installation Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReadFrequency__c</fullName>
        <description>Created as per JIRA task AT-295 to fetch Read Frequency from parent Supply Point.</description>
        <formula>TEXT( SupplyPoint__r.ReadFrequency__c )</formula>
        <label>Read Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemovalDate__c</fullName>
        <label>Removal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SupplyPoint__c</fullName>
        <label>Supply Point</label>
        <referenceTo>SupplyPoint__c</referenceTo>
        <relationshipLabel>Supply Point Devices</relationshipLabel>
        <relationshipName>Supply_Point_Devices</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Supply Point Device</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPD-{000000000}</displayFormat>
        <label>Supply Point Device Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supply Point Devices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>